--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,7 @@
     }
   ],
   "start_url": ".",
+   "scope": "../index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
